--- a/3.1-drf-intro/simple_crud/requirements.txt
+++ b/3.1-drf-intro/simple_crud/requirements.txt
@@ -1,3 +1,7 @@
-django
-djangorestframework
-psycopg2-binary
+asgiref==3.4.0
+Django==3.2.4
+djangorestframework==3.12.4
+Pillow==8.2.0
+psycopg2-binary==2.9.1
+pytz==2021.1
+sqlparse==0.4.1
